# mbounty-gl

./: .clang-format  CMakeLists.txt  README.md  TODO.md  conanfile.txt
cmake/: conan.cmake
data/json/: artifacts.json  castles.json  kb.json  signs.json  towns.json  troops.json  villains.json
data/maps/tmx/: archipelia.tmx  continentia.json  continentia.tmx  forestria.tmx  genesis_tileset.tsx  saharia.tmx  untitled.tmx
data/shaders/: map.glsl.vert  rect.glsl.frag  rect.glsl.vert  sprite.glsl.frag  sprite.glsl.vert  sprite_single_texture.glsl.frag  sprite_single_texture.glsl.vert  text.glsl.frag  text.glsl.vert
data/yaml/: archetypes.yaml  units.yaml
scripts/: run-clang-format.ps1  run-clang-format.sh
src/: assets.cpp  assets.hpp  bounty.cpp  bounty.hpp  engine.cpp  engine.hpp  glfw.hpp  main.cpp  scene-id.hpp  scene-switcher.cpp  scene-switcher.hpp  scene.hpp  shared-state.hpp  signs.hpp  window-engine-interface.cpp  window-engine-interface.hpp  window.cpp  window.hpp
src/battle/: battle.cpp  battle.hpp
src/data/: bounty.cpp  bounty.hpp  castles.hpp  color.hpp  hero.hpp  morale.hpp  puzzle.hpp  shop.hpp  signs.cpp  signs.hpp  spells.hpp  tiles.hpp  towns.hpp  villains.hpp
src/engine/: assets.cpp  assets.hpp  component.hpp  dialog-def.hpp  dialog-stack.cpp  dialog-stack.hpp  dialog.cpp  dialog.hpp  engine.cpp  engine.hpp  event-listener.hpp  events.hpp  gui.cpp  gui.hpp  scene-manager.cpp  scene-manager.hpp  scene-stack.cpp  scene-stack.hpp  scene.hpp  singleton.hpp  textbox.cpp  textbox.hpp  texture-cache.cpp  texture-cache.hpp  timer.cpp  timer.hpp
src/game/: army-gen.cpp  army-gen.hpp  battle.cpp  battle.hpp  chest-commission.cpp  chest-commission.hpp  chest-generator.cpp  chest-generator.hpp  chest-gold.cpp  chest-gold.hpp  chest-spell-capacity.cpp  chest-spell-capacity.hpp  chest-spell-power.cpp  chest-spell-power.hpp  chest-spell.cpp  chest-spell.hpp  chest.cpp  chest.hpp  cute_c2.hpp  defeat.cpp  defeat.hpp  dialog-def.hpp  dialog-stack.cpp  dialog-stack.hpp  dir-flags.hpp  entity-collider.cpp  entity-collider.hpp  entity.cpp  entity.hpp  game-controls.cpp  game-controls.hpp  game-options.hpp  game.cpp  game.hpp  garrison.cpp  garrison.hpp  gen-variables.hpp  hero.cpp  hero.hpp  hud.cpp  (+45 more)
src/gfx/: dialog.cpp  dialog.hpp  font.cpp  font.hpp  gfx.cpp  gfx.hpp  gl.hpp  rect.cpp  rect.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  stb_image.h  stb_image.hpp  text.cpp  text.hpp  textbox.cpp  textbox.hpp  texture.hpp  transformable.cpp  transformable.hpp
src/input/: window-engine-interface.cpp  window-engine-interface.hpp
src/intro/: intro.cpp  intro.hpp
src/scene/: scene.cpp  scene.hpp
src/window/: error.cpp  error.hpp  glfw-keys.hpp  glfw.hpp  keys.hpp  window-engine-interface.cpp  window-engine-interface.hpp  window.cpp  window.hpp
